--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,19 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 dependencies:
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   dio: ^4.0.4
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  freezed: ^1.1.1
+  freezed_annotation: ^1.1.0
+  get_it: ^7.2.0
+  injectable: ^1.5.3
+  retrofit: ^3.0.1+1
+  retrofit_generator: ^4.0.1 
 dev_dependencies:
+  build_runner: ^2.1.8
   flutter_test:
     sdk: flutter
   lint: ^1.8.2
